fix the local build

--- a/example.env
+++ b/example.env
@@ -6,3 +6,4 @@ to save you from accidentally sharing/committing secrets.
 """
 ACCOUNT_SID=<get-this-from-your-twilio-console>
 AUTH_TOKEN=<get-this-from-your-twilio-console>
+TWILIO_NUMBER=<get-this-from-your-twilio-console>
